# solana-bpf-simulator

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml
examples/anchor/: Anchor.toml  Cargo.toml  README.md
examples/anchor/programs/anchor/: Cargo.toml
examples/anchor/programs/anchor/examples/: check.rs
examples/anchor/programs/anchor/src/: lib.rs
examples/raw/: Cargo.toml
examples/raw/examples/: check.rs
examples/raw/src/: lib.rs
src/: executor.rs  lib.rs  main.rs
src/instruction_executor/: account_sizes.rs  context.rs  errors.rs  mod.rs  syscall_errors.rs
src/instruction_executor/syscalls/: mem_ops.rs  mod.rs  sysvar.rs
src/loader/: mod.rs  program_loader.rs  transaction_loader.rs
src/message_executor/: errors.rs  executor.rs  mod.rs
src/message_executor/loader/: mod.rs  program_loader.rs
