[workspace]
exclude = [
    "examples"
]

[package]
name = "solana-bpf-simulator"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "solana-bpf-simulator"
path = "src/main.rs"

[features]
instruction = ["solana_rbpf"]
message = []
default = ["message", "instruction"]

[dependencies]
anyhow = { version = "1" }
bincode = { version = "1" }
bs58 = { version = "0.4" }
fehler = { version = "1" }
getset = { version = "0.1" }
num-traits = { version = "0.2" }
once_cell = { version = "1" }
serde = { version = "1" }
solana-bpf-loader-program = { version = "~1.16.24" }
solana-client = { version = "~1.16.24" }
solana-program-runtime = { version = "~1.16.24" }
solana-runtime = { version = "~1.16.24" }
solana-sdk = { version = "~1.16.24" }
solana-zk-token-sdk = { version = "~1.16.24" }
solana_rbpf = { version = "~0.8", optional = true }
thiserror = { version = "1" }
tracing = { version = "0.1" }
url = { version = "2" }
clap = {version = "~4.1", features = ["derive", "env"] }
solana_rbpf06 = { version = "~0.6", package = "solana_rbpf" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# [patch.crates-io]
# solana-bpf-loader-program = { path = "../solana-mole/programs/bpf_loader" }
# solana-client = { path = "../solana-mole/client" }
# solana-program-runtime = { path = "../solana-mole/program-runtime" }
# solana-program = { path = "../solana-mole/sdk/program" }
# solana-runtime = { path = "../solana-mole/runtime" }
# solana-sdk = { path = "../solana-mole/sdk" }
# solana_rbpf = { path = "../rbpf" }

