[workspace]
exclude = [
    "examples"
]

[package]
name = "solana-bpf-simulator"
version = "0.1.3"
edition = "2021"

[features]
instruction = []
message = []
default = ["instruction"]

[dependencies]
anyhow = "1"
bincode = "1"
bs58 = "0.5"
clap = {version = "4", features = ["derive", "env"]}
fehler = "1"
getset = "0.1"
num-traits = "0.2"
once_cell = "1"
serde = "1"
solana-bpf-loader-program = "~1.16.27"
solana-client = "~1.16.27"
solana-program-runtime = "~1.16.27"
solana-runtime = "~1.16.27"
solana-sdk = "~1.16.27"
solana-zk-token-sdk = "~1.16.27"
solana-loader-v4-program = "~1.16.27"
solana_rbpf = "~0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"

# [patch.crates-io]
# solana-accounts-db = { path = "../solana-mole/accounts-db" }
# solana-bpf-loader-program = { path = "../solana-mole/programs/bpf_loader" }
# solana-client = { path = "../solana-mole/client" }
# solana-program-runtime = { path = "../solana-mole/program-runtime" }
# solana-program = { path = "../solana-mole/sdk/program" }
# solana-runtime = { path = "../solana-mole/runtime" }
# solana-sdk = { path = "../solana-mole/sdk" }
# solana_rbpf = { path = "../rbpf" }

