[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# solana-bpf-loader-program = { path = "../../../solana-mole/programs/bpf_loader" }
# solana-client = { path = "../../../solana-mole/client" }
# solana-program-runtime = { path = "../../../solana-mole/program-runtime" }
# solana-program = { path = "../../../solana-mole/sdk/program" }
# solana-runtime = { path = "../../../solana-mole/runtime" }
# solana-sdk = { path = "../../../solana-mole/sdk" }
# solana_rbpf = { path = "../../../rbpf" }
