[package]
name = "anchor-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

[dev-dependencies]
anyhow = "1"
fehler = "1"
clap = { version = "4", features = [ "derive" ]}
solana-sdk = "1.16"
solana-client = "1.16"
solana-bpf-simulator = { path = "../../../../" }
solana-program-runtime = "~1.16"
bincode = "1"
